--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scaler Secret Talks</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="frontend/styles.css">
 </head>
 <body>
     <h1>Scaler Secret Talks 💬</h1>
@@ -13,6 +13,6 @@
         <input type="text" id="messageInput" placeholder="Type your message..." />
         <button id="sendButton">Send</button>
     </div>
-    <script src="script.js"></script>
+    <script src="frontend/script.js"></script>
 </body>
 </html>
